fixed issue with spacing on contact page and added content in about me section

--- a/contact.css
+++ b/contact.css
@@ -1,53 +1,47 @@
-body {
-    background-color: bisque;
-    font-family: 'Fredoka One', cursive;
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: 0.2fr 0.1fr 1fr 1fr;
-    grid-template-areas: 
-        "header"
-        "nav"
-        "main"
-        "footer";
-}
-
 header {
     grid-area: header;
-    display: flex;
+    display:inline-flex;
     justify-content: center;
-    padding-top: 20px;
+}
+
+h1 {
+  margin: auto;
 }
 
 nav {
     grid-area: nav;
   }
 
-ul {
-  display: flex;
-  justify-content:space-evenly;
-  list-style-type: none;
-  font-family: 'Fredoka One', cursive;
-  margin: 0 25% 0 25%;
-}
-
-li {
-  transition: all 0.4s;
-}
-
-li:hover {
-  font-size: x-large;
-  padding: 2%;
-  background-color: black;
-  color: white;
-}
-
-a {
-  text-decoration: none;
-}
+  ul {
+    display: flex;
+    justify-content:space-evenly;
+    list-style-type: none;
+    font-family: 'Fredoka One', cursive;
+  }
+  
+  li {
+    transition: all 0.4s;
+    height: fit-content;
+  }
+  
+  li:hover {
+    font-size: x-large;
+    padding: 3%;
+    background-color: black;
+    color: white;
+  }
+  
+  a {
+    text-decoration: none;
+  }
 
 main {
     grid-area: main;
-    text-align: center;
+    text-align: center
+}
+
+.nameinfo {
+margin: auto;
 }
 
 .heard {
@@ -81,7 +75,9 @@ footer {
 
 @media (min-width: 375px) {
 body {
-  display: grid;
+  background-color: bisque;
+  font-family: 'Fredoka One', cursive;
+   display: grid;
   grid-template-columns: 1fr;
   grid-template-rows: .2fr 0.2fr 0.3fr;
   grid-template-areas: 
@@ -96,7 +92,8 @@ header {
 }
 
 ul {
-  display: inline-flex;
+  display: flex;
+  justify-content: center;
   flex-wrap: wrap;
 }
 
@@ -106,10 +103,13 @@ li {
 }
 
 @media (min-width: 800px ) {
-  body {display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-template-rows: .2fr 0.2fr 0.3fr;
-  grid-template-areas: 
+  body {
+    background-color: bisque;
+    font-family: 'Fredoka One', cursive;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: auto auto auto;
+    grid-template-areas: 
     "header header"
     "nav nav"
     "main main";
@@ -127,6 +127,20 @@ nav {
 
 li {
   margin: 0%;
-  padding: 10px;
+
+}
+}
+
+@media (min-width: 992px) {
+  body {
+    background-color: bisque;
+    font-family: 'Fredoka One', cursive;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: auto auto auto;
+    grid-template-areas: 
+        "header header header"
+        "nav nav nav"
+        "main main main";
 }
 }
